feat: full feature leaderboard
